--- a/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-searche.xhtml
@@ -137,7 +137,7 @@
                              oncomplete="initDND()">
                 <f:attribute name="action" value="#{'*'}" />
             </p:commandButton>
-            <p:commandButton value="0-9" title="#{bundle.StartDigital}" style="width: 30px;"
+            <p:commandButton value="0-9" title="#{bundle.StartDigital}" style="width: 30px; font-size: 90%;"
                              actionListener="#{explorerBean.abcSearche}"
                              update="#{_tblUpdate}"
                              oncomplete="initDND()">
