--- a/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/companies/departaments/department-card.xhtml
@@ -15,7 +15,7 @@
                          columnClasses="ui-grid-col-8 col-padding">
                 
                 <p:outputLabel value="#{bundle.Company}"/>     
-                <p:inputText value="#{_bean.editedItem.owner.getName()}" disabled="true" styleClass="ui-grid-col-12" />
+                <p:inputText value="#{_bean.companyName}" disabled="true" styleClass="ui-grid-col-12" />
                 
                 <p:outputLabel value="#{bundle.Departament}" />
                 <h:panelGroup  styleClass="ui-grid-col-12">
@@ -24,7 +24,7 @@
                                 onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                 onchange="return itemChange = 1;"
                                 disabled="#{_bean.isReadOnly()}"
-                                required="true"
+                                required="#{param['isRequired'] == 'true'}"
                                 requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
                     <p:message for="name" display="icon"/>
                 </h:panelGroup>
@@ -50,9 +50,9 @@
 
                 <p:outputLabel value="#{bundle.Chief}" />
                 <ui:include src="/view/common/item-select-btn.xhtml" >
-                    <ui:param name="_itemValue" value="#{_bean.editedItem.chief}"/>
+                    <ui:param name="_itemValue" value="#{departmentCardBean.editedItem.chief}"/>
                     <ui:param name="_required" value="#{false}" />
-                    <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
+                    <ui:param name="_disabled" value="#{departmentCardBean.isReadOnly()}"/>
                     <ui:param name="_converter" value="staffConvertor" />
                     <ui:param name="_itemPanel" value="managerPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.Chief}"/>
