--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
@@ -20,7 +20,7 @@
                              onkeypress="checkEsc(#{_bean.cancelBtnName});"
                              disabled="#{!_bean.isHaveRightEdit()}"
                              onchange="return itemChange = 1;"
-                             required="true"
+                             required="#{param['isRequired'] == 'true'}"
                              requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
 
                 <p:outputLabel value="#{bundle.Code}" />
