--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -21,7 +21,7 @@
                                      onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                      disabled="#{!_bean.isHaveRightEdit()}"
                                      onchange="return itemChange = 1;"
-                                     required="true"
+                                     required="#{param['isRequired'] == 'true'}"
                                      requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
                     <p:message for="name" display="icon"/>
                 </h:panelGroup>                
