--- a/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/types/partnertype-сard.xhtml
@@ -19,7 +19,7 @@
                                      styleClass="ui-grid-col-4"
                                      maxlength="50"
                                      disabled="#{_bean.isReadOnly()}"
-                                     required="true" 
+                                     required="#{param['isRequired'] == 'true'}" 
                                      requiredMessage="#{bundle.Field} [#{bundle.ShortName}] #{bundle.MustBeFilled}"/>
                     <p:message for="name"/>
                 </h:panelGroup>
