--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
@@ -4,15 +4,30 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
+    <p:defaultCommand target="#{_frmTree}:accord:btnTreeSearche" />
+    
     <p:toolbar id="toolbarTree" >                                       
         <f:facet name="left">
             <p:commandButton icon="ui-icon-refresh" title="#{bundle.Refresh}"
-                             process="@this"
+                             style="font-size: 90%;"
                              actionListener="#{explorerBean.onReloadTreeItems()}"
                              update="#{_frmTree} #{_frmExpl}"
                              oncomplete="initDND()"/>                       
             
             <span class="ui-separator"><span class="ui-icon ui-icon-grip-dotted-vertical" /></span>
+            <h:panelGroup rendered="#{explorerBean.tree != null}">                
+                <p:inputText value="#{explorerBean.treeSearcheKey}" title="#{bundle.InputCreteriaForSearche}"                             
+                             disabled="#{!explorerBean.isShowTree()}"
+                             style="font-size: 90%;">
+                </p:inputText>
+                <p:commandButton id="btnTreeSearche" title="#{bundle.Searche}" icon="ui-icon-search"
+                                 disabled="#{!explorerBean.isShowTree()}"
+                                 update="#{_frmTree} centerHeaderLabel #{_frmExpl} #{_updates}"
+                                 actionListener="#{explorerBean.onSearcheInTree()}" style="font-size: 90%;" 
+                                 oncomplete="initDND()">
+                </p:commandButton>
+            </h:panelGroup>
+                         
             <p:splitButton value="#{bundle.Actions}" icon="ui-icon-gear"
                             rendered="#{false}">
                 <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateChildGroup}" title="#{bundle.CreateChildGroup}"                            
