--- a/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
@@ -6,7 +6,7 @@
                 template="/view/templ/templ-card.xhtml">
 
     <ui:param name="_bean" value="#{userCardBean}"/>
-
+     
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">  
             <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
@@ -27,7 +27,7 @@
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;"
                                  disabled="#{_bean.isReadOnly()}"
-                                 required="true"
+                                 required="#{param['isRequired'] == 'true'}"
                                  requiredMessage="#{bundle.Field} [#{bundle.FirstName}] #{bundle.MustBeFilled}"/>
 
                     <p:outputLabel value="#{bundle.LastName}" />
@@ -82,10 +82,10 @@
                                      onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                      onchange="return itemChange = 1;"/>
                         <p:commandButton value="#{bundle.Generate}" title="#{bundle.MakeName}"
-                                         actionListener="#{_bean.makeName()}"
+                                         actionListener="#{userCardBean.makeName()}"
                                          update="visbleName"
                                          disabled="#{_bean.isReadOnly()}"
-                                         onchange="return itemChange = 1;">                            
+                                         onclick="return itemChange = 1;">                            
                         </p:commandButton>
                 </p:panelGrid>
             </p:panelGrid>
@@ -102,12 +102,13 @@
                 </h:panelGrid>         
             </p:panelGrid>
         </p:tab>
-
-        <ui:include src="/view/common/dict-item-groups.xhtml" >
-            <ui:param name="_groups" value="#{_bean.editedItem.usersGroupsList}" />
-            <ui:param name="_selectorBean" value="#{userGroupsBean}" />
-            <ui:param name="_showOwner" value="#{false}" />
-        </ui:include>
+        <p:tab title="#{bundle.Groups}">
+            <ui:include src="/view/common/dict-item-groups.xhtml" >
+                <ui:param name="_groups" value="#{_bean.editedItem.usersGroupsList}" />
+                <ui:param name="_selectorBean" value="#{userGroupsBean}" />
+                <ui:param name="_showOwner" value="#{false}" />
+            </ui:include>
+        </p:tab>
 
     </ui:define>
 </ui:composition>
